Update updater updating process